plugins {
    id 'java'
    id 'application'
    id 'checkstyle'
    id 'com.gradleup.shadow' version '9.5.1'
}

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

repositories {
    mavenCentral()
}

checkstyle {
    toolVersion = '11.0.0'
}

dependencies {
    String javaFxVersion = '17.0.7'
    String jUnitVersion = '5.14.4'

    implementation "org.openjfx:javafx-base:${javaFxVersion}:win"
    implementation "org.openjfx:javafx-base:${javaFxVersion}:mac"
    implementation "org.openjfx:javafx-base:${javaFxVersion}:linux"
    implementation "org.openjfx:javafx-controls:${javaFxVersion}:win"
    implementation "org.openjfx:javafx-controls:${javaFxVersion}:mac"
    implementation "org.openjfx:javafx-controls:${javaFxVersion}:linux"
    implementation "org.openjfx:javafx-fxml:${javaFxVersion}:win"
    implementation "org.openjfx:javafx-fxml:${javaFxVersion}:mac"
    implementation "org.openjfx:javafx-fxml:${javaFxVersion}:linux"
    implementation "org.openjfx:javafx-graphics:${javaFxVersion}:win"
    implementation "org.openjfx:javafx-graphics:${javaFxVersion}:mac"
    implementation "org.openjfx:javafx-graphics:${javaFxVersion}:linux"

    testImplementation "org.junit.jupiter:junit-jupiter-api:${jUnitVersion}"

    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${jUnitVersion}"
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.14.4'
}

test {
    useJUnitPlatform()
    enableAssertions = true

    testLogging {
        events 'passed', 'skipped', 'failed'

        showExceptions = true
        exceptionFormat = 'full'
        showCauses = true
        showStackTraces = true
        showStandardStreams = false
    }
}

application {
    mainClass = 'bobby.Launcher'
}

jar {
    // A lean JAR file (i.e., without the dependencies packaged inside) is not needed.
    enabled = false
    // Rename its output anyway; Gradle forbids it clashing with the shadowJar output file, even for a disabled task.
    archiveClassifier = 'without-dependencies'
}

shadowJar {
    archiveFileName = 'bobby.jar'
}

run {
    standardInput = System.in
}
